[package]
name = "smash-sli"
version = "0.9.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2021"
description = "Reading and writing soundlabelinfo.sli files"
documentation = "https://docs.rs/smash-sli"
repository = "https://github.com/jam1garner/smash-sli"
license = "MIT"

[dependencies]
binrw = "0.11"
hash40 = "1.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
